source/css/_partial/unique.styl
//container
#container
  margin auto
  width 60%
  min-width 18rem
    

#banner
  overflow auto
  font-family font-family-serif
  #site-title
  #site-subtitle
    display inline-block
    vertical-align middle
  #site-title
    font-size 2.5em
    font-weight 700
    margin-right 1.5em
  #site-subtitle
    padding-left 1em
    /*border-left thin solid dimgray*/
    font-size small

#content
  text-autospace ideograph-alpha
  .meta
    .article-title
      font-family font-family-sans
      text-transform uppercase
      font-weight 500
      margin-bottom 0
    .article-date
      color darkgray

  .extra
    float right
    padding-left 0.5rem
    display none

  //index
  .abstract-list
  .excerpt
  .archive-list
    padding 0
    color dimgray

  #more
    display none

  .article-content
    font-family font-family-serif
    line-height 1.5
    padding-top 0.5rem
    h2
      font-weight lighter
      font-size 1.3em
    h3
      font-weight lighter
      font-size 1.15em
    a
      padding-left 0.3rem
      padding-right 0.3rem
      color link-color
      &:hover
        color link-hover-color
      img
        margin-left -0.3rem
    p
      font-weight normal
    blockquote
      font-family font-family-serif
      margin 0.5rem 2rem
      padding-left 2rem
      color dimgray
      position relative
      display block
      footer
        font-style italic
        color darkgray
        font-size 0.8em
        margin-top 0.5rem
        display block
        cite
          margin-left 0.5em
        &:before
          content '-'
      &:before
        display: block;
        content: open-quote
        font-size: 5em;
        position: absolute;
        left: -1rem;
        top: -1rem;
        color: #7a7a7a;
    ol
      padding-left 1.5rem
      list-style-type decimal-leading-zero
    ul
      list-style-type disc

  figure.highlight
    margin-right 0
    margin-left 0

  nav
    clear: both
    font-weight lighter
    text-align center

    #left-navigator
      max-width 40%
      float left

    #right-navigator
      max-width 40%
      float right

//footer
#footer
  padding-top 3rem

#footer-links
  padding-left 0.5rem
  margin-top 0
  clear right
  overflow: auto
  list-style-type none
  float right
  ul
    list-style-type none
  li
    float left
    margin-left 1rem
  a
    display inline-block
  .zh
    word-break-cjk break-word
    width 1rem
    letter-spacing 1rem

#search
  float left

#search-icon
  float bottom

#search-input
  padding-left 0.3em
  height 1em
  display inline
  border none

#search-input.hidden
  display none

